Fix: Read SQL file from classpath instead of filesystem (Docker compatibility)